<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-License-Identifier: Apache-2.0
     SPDX-FileCopyrightText: 2026 The halogenOS Project
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/refresh_rate_title">

        <SwitchPreferenceCompat
            android:key="smooth_display"
            android:title="@string/smooth_display_title"
            android:summaryOn="@string/smooth_display_summary_on"
            android:summaryOff="@string/smooth_display_summary_off"
            android:defaultValue="false" />

        <ListPreference
            android:key="ltpo_mode"
            android:title="@string/ltpo_mode_title"
            android:entries="@array/ltpo_mode_entries"
            android:entryValues="@array/ltpo_mode_values"
            android:defaultValue="off" />

    </PreferenceCategory>

</PreferenceScreen>
